--- a/gb/20/1/23/n11816159.md
+++ b/gb/20/1/23/n11816159.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jvzcdz2791/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jvzcdz2791/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jvzcdz2791/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jvzcdz2791/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>支援澳洲森林灭火 三名美消防员遇难</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/000_Hkg2095346-600x400.jpg" />
 <h6>1月23日，在帮助澳洲灭火的过程中，3名美国消防员因消防飞机坠毁，不幸遇难。(Photo by TORSTEN BLACKWOOD / AFP)
 </h6>
 <hr>
-<p>【大纪元2020年01月23日讯】（大纪元记者李凡综合报导）在澳大利亚东南部的灭火行动中，一架消防飞机不幸在新南威尔士州坠毁，机上3名<a href="https://github.com/jvzcdz2791/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%B6%88%E9%98%B2%E5%91%98.md">美国消防员</a>全部遇难。飞机事故正在调查中。</p>
+<p>【大纪元2020年01月23日讯】（大纪元记者李凡综合报导）在澳大利亚东南部的灭火行动中，一架消防飞机不幸在新南威尔士州坠毁，机上3名<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%B6%88%E9%98%B2%E5%91%98.md#1">美国消防员</a>全部遇难。飞机事故正在调查中。</p>
 <p>据《华尔街日报》报导，C-130大力神（C-130 Hercules）周四（1月23日）在悉尼西南约200英里的新南威尔士州（New South Wales）坠毁。新南威尔士州乡郊消防局局长肖恩·菲兹西蒙斯（Shane Fitzsimmons）表示，飞机撞击地面后，可看到一个大火球，机上没有幸存者。</p>
 <p>菲兹西蒙斯还表示，当局与失事飞机失联后，飞行追踪器亦已停止运作，因此飞机坠毁的原因尚不清楚，澳洲当局将会进行调查。</p>
 <p>这次意外中有3人罹难，全部均为美国人，他们是经验丰富的消防救援人员。这3人都是被安排到澳洲协助救援山火。</p>
@@ -16,43 +16,55 @@
 <p>“他们（遇难消防员）远离家乡，正在帮助澳大利亚，这体现了我们两国之间的深厚友谊。”佩恩说。</p>
 <p>根据合同，这架飞机由库尔森航空（Coulson Aviation）的美国公司运营。这是一家总部位于加拿大的私营家族公司，在美国、澳洲、加拿大和智利都有业务。很多消防机构都在使用该公司的飞机，包括加利福尼亚州的奥兰治县消防局。</p>
 <p>该公司表示，将会派一个团队到事发现场进行协助。“我们的挂念和祈祷与三名（遇难）机组人员的家人在一起。”公司在一份声明中说。</p>
-<p>新南威尔士州州长格拉迪斯·贝里吉克利安（Gladys Berejiklian）说，坠机事故“表明火灾季节远没有结束。” “今天提醒人们，每一个捍卫生命和财产的人都在面临着危险。”</p>
+<p>新南威尔士州州长格拉迪斯·贝里吉克利安（Gladys Berejiklian）向遇难者家属表示最诚挚的慰问，并说，坠机事故“表明火灾季节远没有结束。” “今天提醒人们，每一个捍卫生命和财产的人都在面临着危险。”</p>
+<p>贝里吉克利安在推特上发表推文说，出于对三名失去生命的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%B6%88%E9%98%B2%E5%91%98.md#1">美国消防员</a>的尊重，新南威尔士州将在周五降半旗。</p>
+</p>
+<p><center></p>
+<blockquote class="twitter-tweet" data-lang="en">
+<p dir="ltr" lang="en">Out of respect for the three US firefighters who lost their lives operating a Large Air Tanker, flags will fly at half mast in NSW tomorrow.</p>
+<p>— Gladys Berejiklian (@GladysB) <ahref="https://twitter.com/GladysB/status/1220232762109464576?ref_src=twsrc%5Etfw">January 23, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></center>
 <p>据悉，库尔森航空目前已宣布暂时将大型消防飞机停飞，避免同类意外发生。另外，澳洲当局亦会调查是否因燃料问题导致飞机失事。</p>
 <p>澳洲数月来正在经历数年来最严重火灾，到目前为止，已有至少30人死亡，无数房屋被毁。经济损失估计高达数十亿美元。#</p>
 <p>责任编辑：林妍</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/23/n11816159.htm">支援澳洲森林灭火 三名美消防员遇难</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11794545.htm">朴叙俊为菲律宾与澳洲祝祷 盼灾情莫再扩大</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/14/n11792025.htm">大火肆虐四个月 墨尔本空污至“危险”地步</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11779500.htm">Rosé因澳洲大火感到心碎：请帮助我的故乡</a></li>
-> <li><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/20/1/8/n11777218.md">澳洲野火 烟云飘1万2000多公里触及巴西</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】仅剩青藏 武汉肺炎扩至全国 确诊632例</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11814611.htm">武汉封城令引发恐慌 大批民众逃亡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11814163.htm">【内幕】大批医护感染 疫情远超公开数据</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11813994.htm">武汉封城：离境通道关闭 公交全停</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/14/n11793221.htm">【历史回眸】做梦都是灭共复国的上将陈诚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11778584.htm">【命理】天灾注死者天有定 古北京大地震幼儿见证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11797750.htm">台湾2020大选结果命理观</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/14/n11793176.htm">【才子佳人】才貌双全的施良娣为何下嫁黔娄</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11811186.htm">瘟疫被严重隐瞒 习近平发声 武汉人惊醒</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810001.htm">武汉肺炎急速蔓延 专家：“毒王”或已出现</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810508.htm">武汉肺炎患者去世 家人悲愤：死的没有尊严</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11808930.htm">【拍案惊奇】武汉肺炎或更重 此刻还需蒋彦永</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11808116.htm">【新闻看点】一关键因素 孟晚舟被引渡概率增</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11815115.htm">专访前马英九发言人徐巧芯：国民党为何亲共（下）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11809509.htm">林志玲低调现身《红白》 全程观赏Akira演出</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11808467.htm">武汉肺炎刷屏 影视股狂跌 徐峥新片宣布提档</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11809704.htm">长相滑稽的小狗在网上走红 最终被人收养</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11815387.htm">曾之乔与辰亦儒宣布结婚 小年夜甜晒合照</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11810594.htm">惧怕赴一线抗击武汉肺炎 一网友求朱一龙打气</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/15/n11794545.md#1">朴叙俊为菲律宾与澳洲祝祷 盼灾情莫再扩大</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/14/n11792025.md#1">大火肆虐四个月 墨尔本空污至“危险”地步</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/9/n11779500.md#1">Rosé因澳洲大火感到心碎：请帮助我的故乡</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jvzcdz2791/djy/blob/master/gb/20/1/23/n11816159.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jvzcdz2791/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jvzcdz2791/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jvzcdz2791/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jvzcdz2791/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/7/n11306932.md#1" target="_blank">共产暴政录：共产党主导的三区叛乱</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">疫情影响无法开业 山东商户吁减租遭暴力抓捕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/23/n11816159.htm">支援澳洲森林灭火 三名美消防员遇难</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/23/n11816159.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
